```mermaid
stateDiagram-v2
    [*] --> Offline: Device not connected
    
    Offline: Offline State
    Offline: No network activity
    Offline: Not visible in network
    
    Active: Active State
    Active: Sending/receiving data
    Active: Normal communication
    Active: Last seen < 5 minutes
    
    Idle: Idle State
    Idle: Connected but inactive
    Idle: No recent traffic
    Idle: Last seen > 5 minutes
    
    Blocked: Blocked State
    Blocked: Firewall rule active
    Blocked: nftables blocking traffic
    Blocked: is_blocked = true
    Blocked: Status = BLOCKED
    
    Offline --> Active: Device connects and sends traffic
    Offline --> Idle: Device connects but no traffic
    
    Active --> Idle: No traffic for 5+ minutes
    Active --> Blocked: Administrator blocks or auto-block triggered
    Active --> Offline: Device disconnects
    
    Idle --> Active: Traffic resumes
    Idle --> Blocked: Administrator blocks or anomaly detected
    Idle --> Offline: Device disconnects
    
    Blocked --> Active: Administrator unblocks
    Blocked --> Offline: Device disconnects
    
    note right of Active
        Normal operation state.
        Device is communicating
        normally with network.
    end note
    
    note right of Blocked
        Security enforcement state.
        Device cannot communicate
        due to firewall rules.
    end note

```

